objects/Contact.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MGL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MGL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>The person’s website</description>
        <inlineHelpText>The person’s website</inlineHelpText>
        <label>Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>used for uploading offline conversions and lead quality score back to Google Ads
created by ksquared on 4/23/2020
please do not delete</description>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Sort__c</fullName>
        <formula>text(  Account.Customer_Status_Number__c  )+ &quot;-&quot; + TEXT(  Contact_Status_Number__c   ) + &quot;-&quot; + TEXT( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[F] Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>male/female</description>
        <inlineHelpText>male/female</inlineHelpText>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <inlineHelpText>Lead ID Contact was converted from</inlineHelpText>
        <label>LeadID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5. Has or can acuire a budget</fullName>
                </value>
                <value>
                    <fullName>4. Has a homegrown solution or tried a competitor</fullName>
                </value>
                <value>
                    <fullName>3. Actively looking for a solution</fullName>
                </value>
                <value>
                    <fullName>2. Aware of having a problem</fullName>
                </value>
                <value>
                    <fullName>1. Has a problem (but doesn&apos;t know it)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTrial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DQ_Notes__c</fullName>
        <inlineHelpText>Data Quality Notes</inlineHelpText>
        <label>DQ Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRFG_MQL__c</fullName>
        <label>MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_SAL__c</fullName>
        <label>SAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_SQL__c</fullName>
        <label>SQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enriched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enriched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The most accurate location we have (City, State, Country)</description>
        <inlineHelpText>The most accurate location we have (City, State, Country)</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MGL_Date__c</fullName>
        <label>MGL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZI_In_EU__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ZoomInfo - person is European Union</inlineHelpText>
        <label>ZI-In EU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEditor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isViewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isViewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DQ_Status__c</fullName>
        <formula>IF(Isblank(DQ_Last_Updated__c),&quot;Not Completed&quot;,
IF(Today() - DQ_Last_Updated__c &gt; 183,&quot;Expired&quot; ,&quot;Completed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The status of Data Quality updates: &lt;6 months are considered up to date, more than 6 months, expired</inlineHelpText>
        <label>DQ Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Source__c</fullName>
        <label>LG Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opted_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opted Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDR_Notes__c</fullName>
        <label>SDR Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>Seniority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isChurned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChurned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Needs__c</fullName>
        <label>Core Needs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centralize Insights</fullName>
                </value>
                <value>
                    <fullName>Prioritize Features</fullName>
                </value>
                <value>
                    <fullName>Plan a roadmap</fullName>
                </value>
                <value>
                    <fullName>Collect feedback (Portal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Given_Name__c</fullName>
        <label>Given Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indexed_At__c</fullName>
        <description>Timestamp that shows when the email address became inactive</description>
        <inlineHelpText>Timestamp that shows when the email address became inactive</inlineHelpText>
        <label>Indexed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field that&apos;s mapped from Lead to Contact at lead conversion. Because it&apos;s a checkbox, it only updates the contact if the contact was created from lead conversion. Created Sept 26, 2022 and used as logic in process builder so that contacts created from a lead can be excluded from an automation. Admin only field.</description>
        <label>IsFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Space_Project_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTC_Offset__c</fullName>
        <description>The offset from UTC in hours in the person’s location</description>
        <inlineHelpText>The offset from UTC in hours in the person’s location</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_PB_ID__c</fullName>
        <externalId>true</externalId>
        <label>User PB ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bad_Account__c</fullName>
        <formula>Account.Bad_Account__c ||  Account.Name = &quot;productboard&quot; ||  Account.Name = &quot;Customers_system_account&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bad account, shouldn&apos;t&apos; be routed. Includes productboard, Customers_system_account and any account tagged as &quot;Bad Account&quot;</inlineHelpText>
        <label>Bad Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Sub_Role__c</fullName>
        <label>Sub Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Tag__c</fullName>
        <inlineHelpText>Manual field updates to tag contacts and use for filtering and lists.</inlineHelpText>
        <label>Contact Tag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Day__c</fullName>
        <formula>Datevalue( CreatedDate )</formula>
        <label>Created Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRFG_Funnel__c</fullName>
        <label>Funnel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Person</fullName>
                </value>
                <value>
                    <fullName>Person + Fit</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Engaged + Fit</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>Pipeline Opportunity</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Recycled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRFG_Person__c</fullName>
        <label>Person</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dem_Score_1__c</fullName>
        <label>Dem Score 1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dem_Score_2__c</fullName>
        <label>Dem Score 2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Name__c</fullName>
        <label>Family Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manual checkbox for reps to check if this is one of their key contacts on the Account. This will be a way to easily build a report on those key contacts.</description>
        <inlineHelpText>Check this box if this is a key contact on this Account.</inlineHelpText>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <label>Lead Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Role__c</fullName>
        <label>Survey Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a role not listed</fullName>
                </value>
                <value>
                    <fullName>customer success</fullName>
                </value>
                <value>
                    <fullName>customer support</fullName>
                </value>
                <value>
                    <fullName>design</fullName>
                </value>
                <value>
                    <fullName>engineering</fullName>
                </value>
                <value>
                    <fullName>marketing</fullName>
                </value>
                <value>
                    <fullName>product management</fullName>
                </value>
                <value>
                    <fullName>project management</fullName>
                </value>
                <value>
                    <fullName>sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Projects__c</fullName>
        <formula>Account.Number_Of_Projects__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>utmorigterm__c</fullName>
        <label>UTM Original Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Engaged__c</fullName>
        <label>Engaged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inbound_Date__c</fullName>
        <label>Inbound Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Left_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This person is no longer at the company</inlineHelpText>
        <label>Left Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Contributor</fullName>
                </value>
                <value>
                    <fullName>Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referencable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referencable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_at_MQL__c</fullName>
        <label>Score at MQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Source__c</fullName>
        <label>Trial Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial Request</fullName>
                </value>
                <value>
                    <fullName>Trial Owner</fullName>
                </value>
                <value>
                    <fullName>Trial User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.Username</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Role_Clean__c</fullName>
        <formula>Case( lower(Role__c ),
&quot;&quot;,&quot;missing&quot;,
&quot;product&quot;, &quot;product&quot;,
&quot;engineering&quot;, &quot;engineering&quot;,
&quot;sales&quot;, &quot;sales&quot;,
&quot;leadership&quot;, &quot;leadership&quot;,
&quot;operations&quot;, &quot;operations&quot;, 
&quot;marketing&quot;, &quot;marketing&quot;,
&quot;customer_service&quot;, &quot;customer_service&quot;,
&quot;information_technology&quot;, &quot;information_technology&quot;, 
&quot;other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Functional Role provided by Clearnbit Enrichment, &quot;Other&quot; bucket for small # roles.</inlineHelpText>
        <label>CB Role (Clean)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Notes__c</fullName>
        <label>Consent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DQ_Specialist__c</fullName>
        <inlineHelpText>Data Quality Specialist</inlineHelpText>
        <label>DQ Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DQ_Specialist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>TEXT(Owner.Owner_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Source__c</fullName>
        <label>Portal Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portal_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZI_Department__c</fullName>
        <inlineHelpText>ZoomInfo Person&apos;s Department (e.gx Operations, Sales)</inlineHelpText>
        <label>ZI-Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isContributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isContributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_utm_term_c__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmorigmedium__c</fullName>
        <label>UTM Original Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmorigsource__c</fullName>
        <label>UTM Original Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Raised__c</fullName>
        <formula>if( Account.Raised__c =0,NULL,Account.Raised__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Raised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consent_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <label>Contact Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status DELETE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRFG_Has_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE if contact doesn&apos;t wish to be contacted by us again.</description>
        <inlineHelpText>Check if contact doesn&apos;t wish to be contacted by us again.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_MQL_Date__c</fullName>
        <label>First MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Handraise_Date__c</fullName>
        <label>Handraise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Type__c</fullName>
        <label>Reference Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Reference</fullName>
                </value>
                <value>
                    <fullName>Beta Test</fullName>
                </value>
                <value>
                    <fullName>Discovery Interview</fullName>
                </value>
                <value>
                    <fullName>Logo Use</fullName>
                </value>
                <value>
                    <fullName>Content Collaboration</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Slide</fullName>
                </value>
                <value>
                    <fullName>Customer Story</fullName>
                </value>
                <value>
                    <fullName>Event Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Reason__c</fullName>
        <inlineHelpText>Lean Data Contact Routing reason</inlineHelpText>
        <label>Routing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_in_user__c</fullName>
        <label>Signed in user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Outreach__c</fullName>
        <inlineHelpText>This is the Outreach Stage</inlineHelpText>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Outreach_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starter_Source__c</fullName>
        <label>Starter Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Starter_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email_provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if email relates to a personal email provider(vs company domain)</description>
        <label>email provider_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>utmorigcontent__c</fullName>
        <label>UTM Original Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_SDR__c</fullName>
        <formula>NOT(IsNull(TS_Contact_Assigned_to_SDR__c ))</formula>
        <inlineHelpText>Checks if there&apos;s a value in TS_Contact_Assigned_to_SDR__c</inlineHelpText>
        <label>Assigned to SDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_ID_Long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit contact id</inlineHelpText>
        <label>Contact ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_Last_Updated__c</fullName>
        <inlineHelpText>When the record was last updated by Data Quality Team</inlineHelpText>
        <label>DQ Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRFG_MQL_Reason__c</fullName>
        <label>MQL Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met MQL Criteria</fullName>
                </value>
                <value>
                    <fullName>Fast Track</fullName>
                </value>
                <value>
                    <fullName>Manual Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRFG_Person_Fit__c</fullName>
        <label>Person + Fit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Routed_to__c</fullName>
        <inlineHelpText>First Sales Owner Lean Data Routed</inlineHelpText>
        <label>First Routed to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Date__c</fullName>
        <inlineHelpText>Date Stamp - Last time routed to sales by LeanData when MQLed</inlineHelpText>
        <label>LD Routing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LS_Replied_Date__c</fullName>
        <label>LS - Replied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>First MQL Campaing</inlineHelpText>
        <label>First MQL Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contact_Latest_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>1.0 Known</fullName>
                </value>
                <value>
                    <fullName>2.0 Engaged</fullName>
                </value>
                <value>
                    <fullName>2.1 Nurturing</fullName>
                </value>
                <value>
                    <fullName>3.0 MQL</fullName>
                </value>
                <value>
                    <fullName>4.0 Sales Routed</fullName>
                </value>
                <value>
                    <fullName>4.1 Self Serve Trial</fullName>
                </value>
                <value>
                    <fullName>5.0 SAL</fullName>
                </value>
                <value>
                    <fullName>6.0 SQL</fullName>
                </value>
                <value>
                    <fullName>7.0 Pipeline Added</fullName>
                </value>
                <value>
                    <fullName>8.0 Closed Won</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRR_at_Creation__c</fullName>
        <label>MRR at Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <description>Field to capture current + historical notes from Marketing events over time. This field is updated from automation as Marketing Note field is updated.</description>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routed_to_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag if this contact was routed to Sales, used for marketing communication.</description>
        <inlineHelpText>Routed to the sales team? True = Yes, False = No</inlineHelpText>
        <label>Routed to Sales?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>